# shell

./: .env  .gitignore  CMakeLists.txt  README.md  buid.sh  go.mod  go.sum  gofuncs.go  main.c  main.go  shell.nix  todo.md  twillo.go
Email-Sender/: .gitignore  main.go
Encrypt-Decrypt/: READme.md  decrypt.go  encrypt.go
Image-Downloder/: .gitignore  main.go
Table-Scraper/: data.json  go.mod  main.go  utils.go
Tweet-OSINT/: go.mod  main.go
Tweet-Scraper/: go.mod
Video-Downloader/: go.mod  main.go  main.goaa
Web-Scraper/: data.json  go.mod  main.go
include/: builtin.h  parser.h  utils.h
src/: builtin.c  main.c  parser.c  utils.c
tests/: CMakeLists.txt  parser_test.cc  utils_test.cc
